; ModuleID = '/home/carl/AnghaBench/freebsd/libexec/bootpd/bootpgw/extr_bootpgw.c_usage.c'
source_filename = "/home/carl/AnghaBench/freebsd/libexec/bootpd/bootpgw/extr_bootpgw.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [98 x i8] c"usage: bootpgw [-a] [-i | -s] [-d level] [-h count] [-t timeout]\0A               [-w time] server\0A\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"\09 -a\09don't modify ARP table\0A\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"\09 -d n\09set debug level\0A\00", align 1
@.str.3 = private unnamed_addr constant [26 x i8] c"\09 -h n\09set max hop count\0A\00", align 1
@.str.4 = private unnamed_addr constant [47 x i8] c"\09 -i\09force inetd mode (run as child of inetd)\0A\00", align 1
@.str.5 = private unnamed_addr constant [48 x i8] c"\09 -s\09force standalone mode (run without inetd)\0A\00", align 1
@.str.6 = private unnamed_addr constant [44 x i8] c"\09 -t n\09set inetd exit timeout to n minutes\0A\00", align 1
@.str.7 = private unnamed_addr constant [33 x i8] c"\09 -w n\09set min wait time (secs)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @usage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usage() #0 {
  %1 = load i32, i32* @stderr, align 4
  %2 = call i32 @fprintf(i32 %1, i8* getelementptr inbounds ([98 x i8], [98 x i8]* @.str, i64 0, i64 0))
  %3 = load i32, i32* @stderr, align 4
  %4 = call i32 @fprintf(i32 %3, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  %5 = load i32, i32* @stderr, align 4
  %6 = call i32 @fprintf(i32 %5, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  %7 = load i32, i32* @stderr, align 4
  %8 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0))
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.4, i64 0, i64 0))
  %11 = load i32, i32* @stderr, align 4
  %12 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.5, i64 0, i64 0))
  %13 = load i32, i32* @stderr, align 4
  %14 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.6, i64 0, i64 0))
  %15 = load i32, i32* @stderr, align 4
  %16 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.7, i64 0, i64 0))
  %17 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
